reecriture evaluation.md et utilisation ia

--- a/td/.gitignore
+++ b/td/.gitignore
@@ -9,5 +9,10 @@ TD05_auth_jwt.md
 TD06_tests_ci.md
 TD07_extensions.md
 
-# Grille d'évaluation (réservée à l'enseignant)
+# Grilles d'évaluation détaillées (réservées à l'enseignant)
+# La grille publique "evaluation.md" reste visible
 grille_evaluation.md
+grille_notation_detaillee.md
+
+# Email de lancement (brouillon enseignant)
+email_td0.md
