feat(cm): Fusion CM1+CM2 en un seul CM de 2h
- Restructuration CM1 : ajout architecture hexagonale condensée + présentation projet
- Archivage CM2 (renommé .archived, contenu intégral préservé)
- Création cm/README.md avec rationale pédagogique
- Mise à jour README principal (1 CM au lieu de 2, volumes corrigés)
- Mise à jour td/email_td0.md (suppression références CM2)
- Mise à jour td/README.md et td/.gitignore (clarification TDs bonus)
- Mise à jour scripts/export_slides.sh (exclusion .archived)
- Mise à jour architectures_reference.md et claude.md

Rationale: Optimisation temps (20h TD au lieu de 16h) pour pratique intensive TD0-TD4
Contenu hexagonal essentiel intégré dans CM1, détails en référence (CM2.archived)

--- a/td/.gitignore
+++ b/td/.gitignore
@@ -5,6 +5,8 @@
 TD02_usecases_ports.md
 TD03_repository_sql.md
 TD04_api_rest.md
+
+# TDs bonus/optionnels (hors scope du module, fournis pour aller plus loin)
 TD05_auth_jwt.md
 TD06_tests_ci.md
 TD07_extensions.md
