ajout scripts de planning

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 # Fichiers de travail enseignant (ne pas publier)
 cm/README_PRESENTATION.md
 HOWTO.md
-scripts/*
+ADECal.ics
 claude.md
 td/email_td0.md
 
