modif pour evaluation

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,5 @@ td/email_td0.md
 
 # Contexte projet (notes internes)
 project_goal_and_context.md
+td/controle_final_REPONSES_template.md
+td/controle_final_exemple.md
