maj modalités evaluation

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,4 @@ td/email_td0.md
 project_goal_and_context.md
 td/controle_final_REPONSES_template.md
 td/controle_final_exemple.md
+BRIEFING_evaluation_update.md
