mise à jour ppour TD0 et TD1

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,5 @@ project_goal_and_context.md
 td/controle_final_REPONSES_template.md
 td/controle_final_exemple.md
 BRIEFING_evaluation_update.md
+planning_by_group.md
+planning_chronological.md
