--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,4 @@ td/controle_final_exemple.md
 BRIEFING_evaluation_update.md
 planning_by_group.md
 planning_chronological.md
+architecture-logicielle-BUT2-ressources.code-workspace
