ajout precisions sur : Calcul des bonus - Classes Exception du domaine

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,9 @@ ADECal.ics
 claude.md
 td/email_td0.md
 
+# Corrections (à publier après évaluation de tous les groupes)
+td/corrections/
+
 # Fichiers Copilot (instructions privées)
 .github/copilot-instructions.md
 
