split guide TD1

--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,4 @@ BRIEFING_evaluation_update.md
 planning_by_group.md
 planning_chronological.md
 architecture-logicielle-BUT2-ressources.code-workspace
+td/TD1b_modeling_tests.md
