--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,6 @@ planning_by_group.md
 planning_chronological.md
 architecture-logicielle-BUT2-ressources.code-workspace
 td/TD1b_modeling_tests.md
+feedback_etudiants.md
+docs/architecture/README.md
+scripts/export_diagrams.sh
