--- a/td/.gitignore
+++ b/td/.gitignore
@@ -2,7 +2,7 @@
 # Décommentez au fur et à mesure de la publication
 
 # TD01_domain_modeling.md
-TD02_usecases_ports.md
+TD2b_usecases_avances.md
 TD03_repository_sql.md
 TD04_api_rest.md
 
