--- a/td/.gitignore
+++ b/td/.gitignore
@@ -1,7 +1,7 @@
 # TDs non encore publiés (gardés en local jusqu'au moment approprié)
 
 # TD01_domain_modeling.md
-TD2b_usecases_avances.md
+TD2b_ports_and_updates.md
 TD03_repository_sql.md
 TD04_api_rest.md
 
