--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,6 @@ docs/architecture/README.md
 scripts/export_diagrams.sh
 
 td/TD2b_adding_horodating.md
+td/TD3a_sqlite_ticket_repository.md
+td/TD3b_sqlite_user_repository.md
+td/TD3c_relations_multi_repositories.md
