--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,4 @@ td/TD2b_adding_horodating.md
 td/TD3a_sqlite_ticket_repository.md
 td/TD3b_sqlite_user_repository.md
 td/TD3c_relations_multi_repositories.md
+td/TD2b_annexe_cas_usage_clock.md
