modif ordre tds

--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,4 @@ scripts/export_diagrams.sh
 td/TD3b_sqlite_user_repository.md
 td/TD3c_relations_multi_repositories.md
 td/bareme-td1.md
+td/TD04a_api_rest.md
